<resources>
    <string name="app_name">PruebaJuniorAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehiculos_propios">Vehiculos propios</string>
    <string name="vehiculos_disponibles">Vehiculos disponibles</string>
    <string name="perfil">Perfil</string>
    <string name="agregar_veh">Agregar Vehiculos</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="estado">Estado</string>
    <string name="es_favorito">Es favorito:</string>
    <string name="agregar_vehiculo">Agregar Vehiculo</string>
    <string name="coleccion">Colección</string>
    <string name="tipo_combustion">Tipo combustión:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="eliminar_mi_vehiculo">¿Eliminar mi vehículo?</string>
    <string name="title_activity_maps">Map</string>
    <string name="detalle_vehiculo">Detalle Vehículo</string>
    <string name="combustion">Combustión:</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="cc">CC</string>
    <string name="title_activity_login_vehiculo">LoginVehiculoActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="agregar_perfil">Agregar Perfil</string>
    <string name="guardar">Guardar</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="href"><u></u></string>
    <string name="home">¡Bienvenido! Ingresa en el menú lateral y selecciona una opción</string>
</resources>