<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/usuario"
            android:title="@string/perfil" />

        <item
            android:id="@+id/nav_vehiculo_propio"
            android:icon="@drawable/vehiculo_propio"
            android:title="@string/vehiculos_propios" />

        <item
            android:id="@+id/nav_vehiculo_disponible"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/vehiculos_disponibles" />

    </group>
</menu>