<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.juansebastian.pruebajuniorandroid.view.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.juansebastian.pruebajuniorandroid.view.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil"/>

    <fragment
        android:id="@+id/nav_vehiculo_propio"
        android:name="com.juansebastian.pruebajuniorandroid.view.vehiculo.VehiculoPropioFragment"
        android:label="@string/vehiculos_propios"
        tools:layout="@layout/fragment_vehiculo_propio" />

    <fragment
        android:id="@+id/nav_vehiculo_disponible"
        android:name="com.juansebastian.pruebajuniorandroid.view.vehiculo.VehiculoDisponibleFragment"
        android:label="@string/vehiculos_disponibles"
        tools:layout="@layout/fragment_vehiculo_disponible" />


</navigation>