<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginVehiculoActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/androide"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/usuario"
            android:theme="@style/EditTextBlanco"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contrasena_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usuario_login"
            android:layout_marginTop="20dp"
            android:hint="@string/contrasena"
            android:theme="@style/EditTextBlanco"/>

        <Button
            android:id="@+id/inicio_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contrasena_login"
            android:layout_marginTop="20dp"
            android:text="@string/iniciar_sesion"/>


    </RelativeLayout>


</LinearLayout>